--- a/IrisKit.xcodeproj/xcshareddata/xcschemes/Iris Example macOS.xcscheme
+++ b/IrisKit.xcodeproj/xcshareddata/xcschemes/Iris Example macOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0EF4DAB1CE869AD00C52142"
-               BuildableName = "Iris Example iOS.app"
-               BlueprintName = "Iris Example iOS"
-               ReferencedContainer = "container:Iris.xcodeproj">
+               BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+               BuildableName = "IrisKit.app"
+               BlueprintName = "IrisKit Example macOS"
+               ReferencedContainer = "container:IrisKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DAB1CE869AD00C52142"
-            BuildableName = "Iris Example iOS.app"
-            BlueprintName = "Iris Example iOS"
-            ReferencedContainer = "container:Iris.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "IrisKit.app"
+            BlueprintName = "IrisKit Example macOS"
+            ReferencedContainer = "container:IrisKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -55,10 +55,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DAB1CE869AD00C52142"
-            BuildableName = "Iris Example iOS.app"
-            BlueprintName = "Iris Example iOS"
-            ReferencedContainer = "container:Iris.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "IrisKit.app"
+            BlueprintName = "IrisKit Example macOS"
+            ReferencedContainer = "container:IrisKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -74,10 +74,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DAB1CE869AD00C52142"
-            BuildableName = "Iris Example iOS.app"
-            BlueprintName = "Iris Example iOS"
-            ReferencedContainer = "container:Iris.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "IrisKit.app"
+            BlueprintName = "IrisKit Example macOS"
+            ReferencedContainer = "container:IrisKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
