--- a/FeedParser.xcodeproj/xcshareddata/xcschemes/IrisKit macOS.xcscheme
+++ b/FeedParser.xcodeproj/xcshareddata/xcschemes/IrisKit macOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-               BuildableName = "IrisKit Example macOS.app"
-               BlueprintName = "IrisKit Example macOS"
-               ReferencedContainer = "container:IrisKit.xcodeproj">
+               BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
+               BuildableName = "FeedParser.framework"
+               BlueprintName = "FeedParser macOS"
+               ReferencedContainer = "container:FeedParser.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "IrisKit Example macOS.app"
-            BlueprintName = "IrisKit Example macOS"
-            ReferencedContainer = "container:IrisKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -51,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "IrisKit Example macOS.app"
-            BlueprintName = "IrisKit Example macOS"
-            ReferencedContainer = "container:IrisKit.xcodeproj">
+            BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
+            BuildableName = "FeedParser.framework"
+            BlueprintName = "FeedParser macOS"
+            ReferencedContainer = "container:FeedParser.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "IrisKit Example macOS.app"
-            BlueprintName = "IrisKit Example macOS"
-            ReferencedContainer = "container:IrisKit.xcodeproj">
+            BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
+            BuildableName = "FeedParser.framework"
+            BlueprintName = "FeedParser macOS"
+            ReferencedContainer = "container:FeedParser.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
