--- a/FeedParser.xcodeproj/xcshareddata/xcschemes/FeedParser iOS.xcscheme
+++ b/FeedParser.xcodeproj/xcshareddata/xcschemes/FeedParser iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-               BuildableName = "IrisKit.framework"
+               BuildableName = "FeedParser.framework"
                BlueprintName = "FeedParser iOS"
                ReferencedContainer = "container:FeedParser.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "IrisKit.framework"
+            BuildableName = "FeedParser.framework"
             BlueprintName = "FeedParser iOS"
             ReferencedContainer = "container:FeedParser.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "IrisKit.framework"
+            BuildableName = "FeedParser.framework"
             BlueprintName = "FeedParser iOS"
             ReferencedContainer = "container:FeedParser.xcodeproj">
          </BuildableReference>
